defined grid layout

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  
+  <div class="splashPage">
+    <div id="red" class="coLogo"></div>
+    <div id="blue" class="coMessage"></div>
+    <div id="red" class="coNextPage"></div>
+    <div id="blue" class="leftInfoCol"></div>
+    <div id="red" class="coInfoFooter"></div>
+  </div>
 </body>
 </html>
