--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./style.css">
+
+  <title>Document</title>
+  
 </head>
 <body>
   <div class="splashPage">
-    <div id="red" class="coLogo"></div>
+    <div id="green" class="coLogo long"></div>
     <div id="blue" class="coMessage"></div>
     <div id="red" class="coNextPage"></div>
     <div id="blue" class="leftInfoCol"></div>
     <div id="red" class="coInfoFooter"></div>
+    <div id="purple" class="shoutOutSection long"></div>
   </div>
 </body>
 </html>
