staggerd images to a question and answer style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <title>Document</title>
   
 </head>
-<body>
+<!---1-->
+<!-- <body>
   <div class="splashPage">
     <div id="green" class="coLogo long"></div>
     <div id="blue" class="coMessage"></div>
@@ -19,5 +20,49 @@
     <div id="red" class="coInfoFooter"></div>
     <div id="purple" class="shoutOutSection long"></div>
   </div>
-</body>
+</body> -->
+
+
+<!-- <----2----> 
+
+
+<img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
+<img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo">
+
+
+
 </html>
