Hello World Tect and Honk Font added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 
   <title>Document</title>
   
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
+   
 </head>
+
 <!---1-->
 <!-- <body>
   <div class="splashPage">
@@ -25,6 +30,9 @@
 
 <!-- <----2----> 
 
+<body>
+  <h1 class="honkFont">Hello World!</h1>
+</body>
 
 <img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
 <img class="border2 boxsize2" src="./images/JHFMSS.png" alt="JHFMLogo"><img class="border boxsize" src="./images/iLLtech_2023_003.png" alt="iLLtechLogo"> 
